# rust-ffmpeg-splitter

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-aws  Dockerfile-windows  README.md  aac.patch  all.sh  allwindows.sh  bindings.rs  build.mjs  build.rs  build.sh  buildspec.yml  clean.mjs  compile-av1.mjs  compile-fdkaac.mjs  compile-ffmpeg.mjs  compile-libmp3lame.mjs  compile-librubberband.mjs  compile-nvenc.mjs  compile-opus.mjs  compile-vpx.mjs  compile-x264.mjs  compile-x265.mjs  compile-zimg.mjs  const.mjs  fix-aac.patch  fix-links.mjs  fix-linux-links.mjs  fix-macos-links.mjs  generate-bindings.mjs  get-from-docker.mjs  hevc_ps.patch  main.rs  prores.patch  revert-ffmpeg-aac.sh  test-ffmpeg.mjs  x265-api.patch  zip.mjs
.circleci/: config.yml
.github/workflows/: build.yml
remotion/lib/: libavcodec.60.dylib  libavdevice.59.7.100.dylib  libavdevice.60.0.100.dylib  libavdevice.60.dylib  libavfilter.8.44.100.dylib  libavfilter.9.0.100.dylib  libavfilter.9.dylib  libavformat.59.27.100.dylib  libavformat.60.1.100.dylib  libavformat.60.dylib  libavutil.57.28.100.dylib  libavutil.58.0.100.dylib  libavutil.58.dylib  libswresample.4.7.100.dylib  libswresample.4.9.100.dylib  libswscale.6.7.100.dylib  libswscale.7.0.100.dylib  libswscale.7.dylib
remotion/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc
remotion/share/man/man1/: ffmpeg-all.1  ffmpeg-bitstream-filters.1  ffmpeg-codecs.1  ffmpeg-filters.1  ffmpeg-formats.1  ffmpeg-protocols.1  ffmpeg-utils.1  ffmpeg.1  ffprobe-all.1
x265-windows/lib/pkgconfig/: x265.pc
