[package]
name = "ffmpeg-splitter"
version = "0.1.0"
authors = ["Jonny Burger <jonny@remotion.dev>"]
edition = "2021"

[[bin]]
name = "split"
path = "main.rs"

[dependencies]
ffmpeg-next = { git = "https://github.com/JonnyBurger/rust-ffmpeg-upstream", rev = "b9c9896" }
bindgen = { version = "0.59", default-features = false, features = ["runtime"] }

[profile.dev]
rpath = true
