[package]
name = "ffmpeg-splitter"
version = "0.1.0"
authors = ["Jonny Burger <jonny@remotion.dev>"]
edition = "2021"

[[bin]]
name = "split"
path = "main.rs"

[dependencies]
ffmpeg-next = { git = "https://github.com/JonnyBurger/rust-ffmpeg-upstream", rev = "77433a7ab225dc5e77cabe25de8ecfe033b8a734" }
bindgen = { version = "0.59", default-features = false, features = ["runtime"] }

[profile.dev]
rpath = true
